name:                HelloBlackJack
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/HelloBlackJack#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src, src/BlackJack
  ghc-options:         -Wall
  exposed-modules:     BlackJack.Card
                     , BlackJack.BlackJack
                     , BlackJack.BlackJackApp

  other-modules:       
  build-depends:       base >= 4.7 && < 5
                     , protolude
                     , haskus-utils
                     , random
                     , random-shuffle
                     , monad-loops
                     , either
                     , mtl
                     
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

executable HelloBlackJack-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , HelloBlackJack
                     , protolude
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

test-suite HelloBlackJack-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , HelloBlackJack
                     , protolude 
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/githubuser/HelloBlackJack
